--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,8 +12,12 @@ pool:
 steps:
 - task: UseNode@1
   inputs:
-    version: '12.x'
-  displayName: 'Install Node.js'
+    version: '18.x'  # Specify the Node.js version you need (18.x or 20.x)
+  displayName: 'Use Node.js 18'
+
+- script: |
+    yarn install
+  displayName: 'Install Dependencies using Yarn'
 
 - task: Npm@1
   displayName: 'Install Angular CLI'
@@ -21,10 +25,8 @@ steps:
     command: 'custom'
     customCommand: 'install -g @angular/cli'
 
-- task: Npm@1
-  displayName: 'Install Dependencies'
-  inputs:
-    command: 'install'
+
+
 
 # Install Snyk
 - task: Npm@1
