--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -12,9 +12,17 @@ pool:
 steps:
 - task: UseNode@1
   inputs:
-    version: '12.x'  # Specify the Node.js version you need (18.x or 20.x)
-  displayName: 'Use Node.js 18'
+    version: '20.x'  # Specify the Node.js version you need (18.x or 20.x)
+  displayName: 'Use Node.js '
 
+
+- script: |
+    npm install -g yarn
+  displayName: 'Install Yarn'
+
+- script: |
+    yarn install
+  displayName: 'Install Dependencies with Yarn'
 
 
 - task: Npm@1
@@ -24,10 +32,7 @@ steps:
     customCommand: 'install -g @angular/cli'
 
 
-- task: Npm@1
-  displayName: 'Install Dependencies'
-  inputs:
-    command: 'install'
+
 
 
 # Install Snyk
