--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,7 @@ steps:
 
 - script: |
     npm install -g yarn
+    npm install --save-dev @angular-devkit/build-angular
   displayName: 'Install Yarn'
 
 
@@ -52,11 +53,7 @@ steps:
 #       snyk test
 #       snyk monitor
 
-- task: Cache@2
-  inputs:
-    key: 'npm | "$(Agent.OS)" | package-lock.json'
-    path: $(npm config get cache)
-  displayName: 'Cache Node Modules'
+
 
 # Run Angular Tests and Build
 - task: CmdLine@2
