--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -21,9 +21,7 @@ steps:
 
   displayName: 'Install Yarn'
 
-- script: |
-    yarn install
-  displayName: 'Install Node Packages'
+
 
 
 
@@ -31,7 +29,7 @@ steps:
   displayName: 'Install Angular CLI'
   inputs:
     command: 'custom'
-    customCommand: 'install -g @angular/cli@18.2.7'
+    customCommand: 'install -g @angular/cli@latest'
 
 
 
@@ -64,6 +62,7 @@ steps:
   inputs:
     workingDirectory: '$(Build.SourcesDirectory)/integration/platform-server'
     script: |
+      yarn install
       ng test --no-watch --no-progress --browsers ChromeHeadless --code-coverage
       ng build --prod 
 
