Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -16,10 +16,16 @@ steps:
   displayName: 'Use Node.js '
 
 
-#- script: |
- #   npm install -g yarn
-#
- # displayName: 'Install Yarn'
+- script: |
+    npm install -g yarn
+    yarn cache clean
+    rm -rf node_modules yarn.lock
+    yarn install
+    ng update
+
+
+
+  displayName: 'Install Yarn'
 
 
 
@@ -62,7 +68,6 @@ steps:
   inputs:
     workingDirectory: '$(Build.SourcesDirectory)/integration/platform-server'
     script: |
-      npm install --legacy-peer-deps
       ng test --no-watch --no-progress --browsers ChromeHeadless --code-coverage
       ng build --prod 
 
