--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -15,9 +15,13 @@ steps:
     version: '20.x'  # Specify the Node.js version you need (18.x or 20.x)
   displayName: 'Use Node.js '
 
+- script: yarn cache clean
+  displayName: 'clean cache'
+
 
 - script: npm install --global yarn
   displayName: 'Install Yarn'
+
 
 - script: yarn install
   displayName: 'Install Node Packages'
