--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,29 +5,31 @@ pool:
   name: 'Default'
   vmImage: 'ubuntu-latest'
 
+
 steps:
 - task: UseNode@1
   inputs:
-    version: '20.x'  # Specify the Node.js version you need (18.x or 20.x)
-  displayName: 'Use Node.js'
+    version: '20.x'
+  displayName: 'Install Node.js'
 
-- script: yarn cache clean
-  displayName: 'Clean Yarn Cache'
-
-- script: npm install --global yarn
-  displayName: 'Install Yarn'
-
-- script: yarn install
-  displayName: 'Install Node Packages'
-
-- script: npm install -g @angular/cli@latest
+- task: Npm@1
   displayName: 'Install Angular CLI'
+  inputs:
+    command: 'custom'
+    customCommand: 'install -g @angular/cli'
 
+- task: Npm@1
+  displayName: 'Install Dependencies'
+  inputs:
+    command: 'install'
 # Run Angular Tests and Build
-- script: |
-    ng test --no-watch --no-progress --browsers ChromeHeadless --code-coverage
-    ng build --prod
+- task: Bash@3
   displayName: 'Angular Test and Build'
+  inputs:
+    targetType: 'inline'
+    script: |
+      ng test --no-watch --no-progress --browsers ChromeHeadless --code-coverage
+      ng build --prod
 
 # Generate Code Coverage Report
 - task: reportgenerator@5
