--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -18,6 +18,14 @@ steps:
     command: 'custom'
     customCommand: 'install -g @angular/cli'
 
+- script: |
+    npm install @angular/core@19.0.0-next.8 @angular/common@19.0.0-next.8 @angular/material@19.0.0-next.8 @angular/cdk@19.0.0-next.8
+    npm install --legacy-peer-deps
+    npm cache clean --force
+    npm install
+
+
+  displayName: 'Angular Test and Build'
 - task: Npm@1
   displayName: 'Install Dependencies'
   inputs:
